Added swagger_p2
