# swagger/v1/swagger.yaml
@@ -772,7 +772,7 @@ paths:
                     status: 404
                     error: Not Found
     put:
-      summary: update user (name, description, gender, birthday)
+      summary: update user
       tags:
       - Users
       parameters: []
@@ -781,23 +781,131 @@ paths:
           description: ok
           content:
             application/json:
-              schema:
-                "$ref": "#/components/schemas/show_user"
+              examples:
+                updated:
+                  value:
+                    id: 1
+                    email: abc@gmail.com
+                    name: User name
+                    description: User description
+                    avatar_url: https://lessoner.s3.amazonaws.com/image-url
+                    phone: "+375291234567"
+                    verified: false
+                    gender: female
+                    birthday: '2000-01-01'
+                    created_at: '2022-12-01 14:11:33 +0300'
+                email_sent:
+                  value:
+                    deliver: sent
+        '403':
+          description: forbidden
+          content:
+            application/json:
+              examples:
+                password_not_match:
+                  value:
+                    error: current password does not match
         '422':
           description: unprocessable entity
           content:
             application/json:
               examples:
-                example_name_too_short:
+                name_too_short:
                   value:
                     errors:
                       name:
                       - is too short (minimum is 3 characters)
+                email_exists:
+                  value:
+                    error: email already exists
       requestBody:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/update_user"
+              oneOf:
+              - "$ref": "#/components/schemas/update_user"
+              - type: object
+                properties:
+                  phone:
+                    type: string
+                    example: "+375297774455"
+              - type: object
+                properties:
+                  email:
+                    type: string
+                    example: nagibator2000@gmail.com
+              - type: object
+                properties:
+                  password:
+                    type: string
+                    example: 9p0i5z6de67c4
+                  current_password:
+                    type: string
+                    example: '1234567890'
+                required:
+                - password
+                - current_password
+  "/users/update_email?token={token}":
+    parameters:
+    - name: token
+      in: path
+      description: token
+      required: true
+      schema:
+        type: string
+    get:
+      summary: update email
+      tags:
+      - Users
+      responses:
+        '200':
+          description: ok
+          content:
+            application/json:
+              examples:
+                updated:
+                  value:
+                    user: email has been changed
+        '404':
+          description: not found
+          content:
+            application/json:
+              examples:
+                user_not_found:
+                  value:
+                    error: Not found
+  "/verify":
+    post:
+      summary: verify phone
+      tags:
+      - Users
+      parameters: []
+      responses:
+        '200':
+          description: ok
+          content:
+            application/json:
+              examples:
+                verified:
+                  value:
+                    verified: true
+        '422':
+          description: unprocessable entity
+          content:
+            application/json:
+              examples:
+                invalid_code:
+                  value:
+                    error: the code is invalid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                verification_code:
+                  type: string
+                  example: '54957'
 servers:
 - url: https://{lessonerTest}
   variables:
@@ -1056,8 +1164,11 @@ components:
           type: string
           example: "+375291234567"
         gender:
-          type: integer
-          example: male
+          type: string
+          enum:
+          - male
+          - female
+          - other
         birthday:
           type: string
           example: '2000-01-01'
@@ -1085,8 +1196,11 @@ components:
           type: string
           example: User description
         gender:
-          type: integer
-          example: male
+          type: string
+          enum:
+          - male
+          - female
+          - other
         birthday:
           type: string
           example: '2000-01-01'
